2018-01-23  Youenn Fablet  <youenn@apple.com>

        Mark some service-worker fetch tests as DumpJSConsoleLogInStdErr
        https://bugs.webkit.org/show_bug.cgi?id=181975

        Unreviewed.

        * TestExpectations:

2018-01-22  Simon Fraser  <simon.fraser@apple.com>

        Optimize building the non-fast scrollable region with multiple iframes
        https://bugs.webkit.org/show_bug.cgi?id=181971

        Reviewed by Zalan Bujtas.

        * platform/mac-wk2/TestExpectations: fast/frames/lots-of-objects.html is no longer always a timeout.

2018-01-22  Jiewen Tan  <jiewen_tan@apple.com>

        [WebAuthN] Implement PublicKeyCredential's [[Create]] with a dummy authenticator
        https://bugs.webkit.org/show_bug.cgi?id=181928
        <rdar://problem/36459893>

        Reviewed by Brent Fulgham.

        Test cases are divided into two different folders. One follows wpt style. The other contains tests
        that I don't know how to write them in wpt style.

        * http/tests/webauthn/public-key-credential-create-with-invalid-parameters.https-expected.txt: Added.
        * http/tests/webauthn/public-key-credential-create-with-invalid-parameters.https.html: Added.
        * http/tests/webauthn/public-key-credential-same-origin-with-ancestors-2.https-expected.txt: Added.
        * http/tests/webauthn/public-key-credential-same-origin-with-ancestors-2.https.html: Added.
        * http/tests/webauthn/public-key-credential-same-origin-with-ancestors.https-expected.txt: Added.
        * http/tests/webauthn/public-key-credential-same-origin-with-ancestors.https.html: Added.
        * http/tests/webauthn/resources/last-layer-frame.https.html: Added.
        * http/tests/webauthn/resources/second-layer-frame.https.html: Added.
        * http/tests/webauthn/resources/util.js: Added.
        It will be good to convert them into wpt style.
        * http/wpt/webauthn/WebAuthN.idl: Added.
        * http/wpt/webauthn/idl.https-expected.txt: Added.